--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,9 @@
     <!-- Modified site title section with logo -->
     <div class="site-title-container">
       <a class="site-title" rel="author" href="{{ '/' | relative_url }}">
-        <img src="{{ '/assets/logo.png' | relative_url }}" alt="Site Logo" class="site-logo" style="border-radius: 50%;">
+        {%- if site.logo -%}
+        <img src="{{ site.logo | relative_url }}" alt="Site Logo" class="site-logo" style="border-radius: 50%;">
+        {%- endif -%}
         <span class="site-title-text">{{ site.title | escape }}</span>
       </a>
     </div>
